[gd_scene load_steps=3 format=3 uid="uid://fev7ecey0khb"]

[ext_resource type="Script" path="res://scripts/visualizer.gd" id="1_is4ub"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rn2vs"]

[node name="Visualizer" type="Window"]
initial_position = 4
size = Vector2i(600, 200)
script = ExtResource("1_is4ub")

[node name="GarbageCollector" type="Area2D" parent="."]

[node name="GarbageCollectorShape" type="CollisionShape2D" parent="GarbageCollector"]
position = Vector2(-30, 0)
scale = Vector2(0.1, 1)
shape = SubResource("RectangleShape2D_rn2vs")

[node name="SpawnMarker" type="Marker2D" parent="."]

[node name="VisualizerEditableName" type="LineEdit" parent="."]
offset_right = 67.0625
offset_bottom = 31.0

[connection signal="size_changed" from="." to="." method="_on_size_changed"]
[connection signal="body_entered" from="GarbageCollector" to="." method="_on_garbage_collector_body_entered"]
